PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/OutsoursingResult__c.object-meta.xml
<CustomObject>
    <label>외주처리결과</label>
    <nameField>
        <displayFormat>OSR{000000}</displayFormat>
        <label>외주처리결과 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>