PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/fields/CntError__c.field-meta.xml
<CustomField>
    <fullName>CntError__c</fullName>
    <label>에러수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>