PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/fields/CntImport__c.field-meta.xml
<CustomField>
    <fullName>CntImport__c</fullName>
    <label>입고수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>