PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/fields/InventoryAfter__c.field-meta.xml
<CustomField>
    <fullName>InventoryAfter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>가공 후 재고</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>외주처리결과</relationshipLabel>
    <relationshipName>OutsoursingResultAfter</relationshipName>
    <type>Lookup</type>
</CustomField>