PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/fields/Outsoursing__c.field-meta.xml
<CustomField>
    <fullName>Outsoursing__c</fullName>
    <label>외주처리</label>
    <referenceTo>Outsoursing__c</referenceTo>
    <relationshipLabel>외주처리결과</relationshipLabel>
    <relationshipName>OutsoursingResult</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>