PA_Education/TestMenifest/force-app/main/default/objects/OutsoursingResult__c/fields/TempBarcode__c.field-meta.xml
<CustomField>
    <fullName>TempBarcode__c</fullName>
    <description>수입검사시 클래스에서 사용하는 임시 필드임, 항상 null</description>
    <label>바코드(임시)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>